# codex-subagent-router

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/scripts/: validate_release.py
.github/workflows/: ci.yml  publish.yml  release-testpypi.yml
.scratch/release-readiness/: spec.md
.scratch/release-readiness/issues/: 01-install-race.md  02-blank-codex-home.md  03-v1-v2-seam.md  04-01443-probe.md  05-license.md  06-plan-status-health.md  07-install-runbook.md  08-support-matrix.md  09-release-chain.md  10-01444-probe.md  11-standalone-agent-conflict-preflight.md
.scratch/release-readiness/research/: v1-v2-spawn-contract.md
.scratch/skill-guidance-layer/: spec.md
.scratch/user-install-lifecycle/: spec.md
.scratch/user-install-lifecycle/issues/: 01-update-owned-hook-launcher.md  02-doctor-uninstall-e2e.md
.scratch/v2-compat-intake/: spec.md
.scratch/v2-compat-intake/issues/: 01-hide-spawn-metadata-prereq.md  02-tool-namespace-reserved-conflict.md  03-agents-table-v2-coexistence.md  04-luna-low-exploration-route.md  05-ultra-rationale-adr.md  (+1 more)
docs/: initial-scope.md  role-contracts.md  routing-policy.md
docs/adr/: 0001-use-pretooluse-and-subagentstart.md  0002-separate-role-identity-from-compute.md  0003-use-recoverable-user-installation-transactions.md  0004-prohibit-ultra-child-effort.md  0005-enable-multiagent-v2-for-gpt-5-6.md  0006-layer-advisory-guidance-over-optional-enforcement.md  0007-plan-model-and-effort-independently.md
docs/research/: codex-0.144.1-hook-evidence.md  codex-0.144.3-hook-evidence.md  codex-0.144.3-multiagent-spawn-contract.md  codex-0.144.4-hook-evidence.md  codex-0.144.4-v2-luna-child-evidence.md  codex-0.144.4-v2-real-backend-evidence.md  deepswe-v1.1-routing-evidence.md  hook-vs-custom-agent-evaluation.md
src/codex_subagent_router/: __init__.py  _installation_agents.py  _installation_doctor.py  _installation_files.py  _installation_rollback.py  _installation_types.py  _installation_update.py  _installation_v2.py  commands.py  document_handlers.py  hook_specs.py  install_commands.py  installation.py  policy.py  protocol.py  roles.py  skill_render.py  skill_source.py  start_context.py  usage_report.py  validator.py
tests/: test_commands.py  test_install_commands.py  test_installation.py  test_installation_agents.py  test_installation_concurrency.py  test_installation_doctor.py  test_installation_recovery.py  test_installation_rollback.py  test_installation_safety.py  test_installation_status.py  test_policy.py  test_protocol.py  test_release_validation.py  test_skill_commands.py  test_skill_render.py  test_start_context.py  test_usage_report.py  test_validator.py
