[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-subagent-router"
version = "0.1.2"
description = "Policy and hook adapters for routing Codex subagents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "dzshzx", email = "22311806+dzshzx@users.noreply.github.com" }]
keywords = ["codex", "hooks", "subagent", "routing", "policy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Repository = "https://github.com/dzshzx/codex-subagent-router"
Issues = "https://github.com/dzshzx/codex-subagent-router/issues"

[project.scripts]
codex-subagent-router = "codex_subagent_router.install_commands:main"
codex-subagent-router-hook = "codex_subagent_router.commands:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_subagent_router = ["py.typed"]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
